{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 5,
  "lineage": "abac9db9-527e-5190-3c1c-23025387cd3d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cdktf-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-21T11:39:58.492-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/css-cedric-2023/global/firewalls/cdktf-http",
            "log_config": [],
            "name": "cdktf-http",
            "network": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/networks/cdktf-network",
            "priority": 1000,
            "project": "css-cedric-2023",
            "self_link": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/firewalls/cdktf-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.cdktf-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cdktf-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-21T11:39:58.007-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/css-cedric-2023/global/firewalls/cdktf-ssh",
            "log_config": [],
            "name": "cdktf-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/networks/cdktf-network",
            "priority": 1000,
            "project": "css-cedric-2023",
            "self_link": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/firewalls/cdktf-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.cdktf-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "css-cdktf-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230912",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/zones/europe-central2-a/disks/css-cdktf-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/css-cedric-2023/zones/europe-central2-a/instances/css-cdktf-vm",
            "instance_id": "6731191470925099793",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "1tYFTB0vt2E=",
            "name": "css-cdktf-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.168.251",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/networks/cdktf-network",
                "network_ip": "10.186.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/regions/europe-central2/subnetworks/cdktf-network",
                "subnetwork_project": "css-cedric-2023"
              }
            ],
            "project": "css-cedric-2023",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/zones/europe-central2-a/instances/css-cdktf-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_network.cdktf-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "cdktf-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/css-cedric-2023/global/networks/cdktf-network",
            "mtu": 0,
            "name": "cdktf-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "css-cedric-2023",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/networks/cdktf-network"
          }
        }
      ]
    }
  ]
}